r92su now compiles

--- a/Makefile.r92su
+++ b/Makefile.r92su
@@ -3,7 +3,7 @@ KSRC ?= /lib/modules/$(shell uname -r)/build
 
 KMOD_SRC ?= $(CURDIR)/r92su
 
-EXTRA_CFLAGS += -DDEBUG
+#EXTRA_CFLAGS += -DDEBUG
 
 OPTION_R92SU = CONFIG_R92SU=m
 KMOD_OPTIONS = $(OPTION_R92SU)
@@ -21,7 +21,7 @@ EXTRA_CFLAGS += -D$(OPTION_WPC)
 #EXTRA_CFLAGS += -D$(OPTION_DEBFS)
 
 all:
-	$(MAKE) -C $(KSRC) M=$(KMOD_SRC) $(KMOD_OPTIONS) $(MAKECMDGOALS) EXTRA_CFLAGS="$(EXTRA_CFLAGS)"
+	$(MAKE) -C $(KSRC) M=$(KMOD_SRC) $(KMOD_OPTIONS) $(MAKECMDGOALS) EXTRA_CFLAGS="$(EXTRA_CFLAGS) -w"
 
 .PHONY: all load unload reload clean
 
